kubelabs101/Ingress101/ingress-treafik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-trk
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "false"
spec:
  rules:
  - http:
      paths:
        - path: /tr-apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 5678
        - path: /tr-banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port:
                 number: 5678
